--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -15,7 +15,7 @@
   gap: 10px;
   background-color: #3b3285;
   color: white;
-  padding: 10px 0;
+  padding: 30px 0 30px 0;
 }
 
 /* logo css start with fully responsively */
@@ -152,8 +152,7 @@
 .copy-right-line {
   width: 100%;
   font-size: 15px;
-  position: relative;
-  margin-bottom: -10px;
+  position: absolute;
   text-align: center;
   background-color: #FAAC1B;
   color: #3b3285;
