--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,11 @@
 .error{
   border: 0.8px solid red !important;
 }
+.alert {
+  position: fixed;
+  width: 100%;  
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* Add other styling properties as needed */
+}
